force-app/main/default/objects/ilms__Certification_Path__c/ilms__Certification_Path__c.object-meta.xml
<CustomObject>
    <label>Certification Path</label>
    <nameField>
        <label>Certification Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Paths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>