force-app/main/default/objects/ilms__Certification_Path__c/fields/ilms__Active__c.field-meta.xml
<CustomField>
    <fullName>ilms__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>