force-app/main/default/objects/ilms__Certification_Path__c/fields/ilms__Certification__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification__c</fullName>
    <label>Certification</label>
    <referenceTo>ilms__Certification__c</referenceTo>
    <relationshipLabel>Certification Paths</relationshipLabel>
    <relationshipName>Certification_Paths</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>