force-app/main/default/objects/ilms__Certification_Path__c/fields/ilms__Courses_Count__c.field-meta.xml
<CustomField>
    <fullName>ilms__Courses_Count__c</fullName>
    <label>Number of Courses</label>
    <summaryForeignKey>ilms__Certification_Course__c.ilms__Certification_Path__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>