force-app/main/default/objects/ilms__Certification_Path__c/fields/ilms__Expires_In_Days__c.field-meta.xml
<CustomField>
    <fullName>ilms__Expires_In_Days__c</fullName>
    <label>Expires In Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>